[package]
name = "da_verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha3 = "0.10.8"
blake3 = "1.5"
reed-solomon-erasure = "6.0"
rand = "0.9.2"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dashmap = "5.5"
bytes = "1.5"
hex = "0.4"
base64 = "0.21"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
prometheus = "0.13"
warp = "0.3"
futures = "0.3"
sha2 = "0.10"

# Ethereum specific
ethers = "2.0"
ark-bls12-381 = "0.4"
ark-poly = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
mockito = "0.31"